[package]
name = "curl"
version = "0.1.0"
authors = ["Chris Dukakis <chrisdukakis@gmail.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
    "Window",
    "Performance",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
